--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="line horizontal"></div>
+        <div class="line vertical"></div>
         <div class="target_img">
             <img src="./img/target.png" alt="target" />
             <div id="log">좌표를 나타냅니다</div>
